upcoming events alignment fix

--- a/src/app/uikit/eventCard/eventCard.module.sass
+++ b/src/app/uikit/eventCard/eventCard.module.sass
@@ -67,6 +67,6 @@
         gap: 30px
         top: 30%
         left: 5%
-        width: 90%
+        width: 80%
         height: auto
 
