--- a/src/app/uikit/upcomingEvents/upcomingEvents.module.sass
+++ b/src/app/uikit/upcomingEvents/upcomingEvents.module.sass
@@ -40,7 +40,7 @@ $accentTransp: #674ae950
         
 
         .smallEventContainer
-            width: 90%
+            width: 100%
             min-height: 100px
             padding: 10px
 
@@ -58,7 +58,6 @@ $accentTransp: #674ae950
             
             .date
                 height: 40px
-
                 padding: 5px
                 border-radius: 6px
                 background-color: white
@@ -67,5 +66,3 @@ $accentTransp: #674ae950
                 justify-content: center
                 align-items: center
 
-
-    
